--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "laraveles/spanish": "^1.5",
-        "styde/html": "~1.0"
+        "realrashid/sweet-alert": "^4.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
