--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,5 +5,5 @@ image:
   file: .gitpod.Dockerfile
 tasks:
   - init: bash .gitpod-init.sh
-    command: php artisan migrate --seed && php artisan serve
+    command: php artisan migrate --seed && php artisan serve && npm run dev
 
