--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "laraveles/spanish": "^1.5",
+        "livewire/livewire": "^2.10",
+        "maatwebsite/excel": "*",
         "realrashid/sweet-alert": "^4.1"
     },
     "require-dev": {
